# landsat-timeseries

./: .gitignore  README.md  init_assets.py  pyproject.toml
configs/: area_harmonic_beta_coeffs.yaml  sample_pts_landsat578.yaml  swiss_alps_lst.yaml
notebooks/: 01_extraction_test.ipynb  exploration.ipynb
scripts/: extract_landat_imis_locations.py
src/rs_timeseries/: config.py  export.py  extraction.py  io.py  main.py  modeling.py  preprocessing.py  products.py  utils.py
tests/: test_config.py  test_products.py
